<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.97"
        android:orientation="vertical" >

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/icon_imageView"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/appName_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/icon_imageView"
                        android:text="@string/appName"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/developerName_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/appName_textView"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/appName_textView"
                        android:layout_marginTop="2dp"
                        android:clickable="true"
                        android:text="@string/developerName" />

                    <RatingBar
                        android:id="@+id/averageRating_ratingBar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:isIndicator="true" />
                </RelativeLayout>

                <Gallery
                    android:id="@+id/screenshots_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#A0A0A0" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F0F0F0"
                    android:baselineAligned="false"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/version_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/versionNumber"
                            android:textColor="#303030" />

                        <TextView
                            android:id="@+id/installs_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/installs"
                            android:textColor="#303030" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/size_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/versionSize"
                            android:textColor="#303030" />

                        <TextView
                            android:id="@+id/versionDate_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/versionDate"
                            android:textColor="#303030" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/description_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <RatingBar
                    android:id="@+id/yourRate_ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F0F0F0"
                    android:orientation="vertical"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp" >

                    <TextView
                        android:id="@+id/developerWebsite_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/developerWebsite"
                        android:textColor="#303030" />

                    <TextView
                        android:id="@+id/developerSupportEmail_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="email"
                        android:text="@string/developerSupportEmail"
                        android:textColor="#303030" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer_Layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:background="#202020"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/open_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open" />

        <Button
            android:id="@+id/install_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/install" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update" />
    </LinearLayout>

</LinearLayout>